--- a/src/index.css
+++ b/src/index.css
@@ -7,12 +7,17 @@
 	--nav-height: 80px;
 }
 
+html {
+	scroll-behavior: smooth;
+}
+
 * {
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
 }
 
-body {
-	background-color: var(--background);
+.container {
+	margin: 0 auto;
+	max-width: 1440px;
 }
