--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -54,18 +54,26 @@
 }
 
 .icons__section {
-	width: 60%;
+	width: 40%;
 	display: flex;
 	align-items: center;
 	justify-content: space-around;
 	margin-top: 30px;
 }
 
-.icons__section div {
-	height: 60px;
-	width: 60px;
-	background-color: #ccc;
-	border-radius: 10px;
+#github-icon:hover {
+	fill: #24292f;
+}
+
+/* LinkedIn & Frontend Mentor */
+.icons__img {
+	filter: grayscale(100%);
+	transition: filter 0.2s;
+}
+
+.icons__img:hover {
+	filter: none;
+	transition: filter 0.4s;
 }
 
 /* contact */
