--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -17,7 +17,7 @@
 	height: 90vh;
 }
 
-.presentation__img {
+.presentation__img-section {
 	background-color: #eeeeee;
 	border-radius: 50%;
 	height: 200px;
@@ -25,17 +25,32 @@
 	overflow: hidden;
 }
 
+.presentation__img {
+	width: 200px;
+	height: 200px;
+}
+
 @media (max-width: 580px) {
-	.presentation__img {
+	.presentation__img-section {
 		height: 150px;
 		width: 150px;
+	}
+
+	.presentation__img {
+		width: 150px;
+		height: 150px;
 	}
 }
 
 @media (max-width: 580px) {
-	.presentation__img {
+	.presentation__img-section {
 		height: 120px;
 		width: 120px;
+	}
+
+	.presentation__img {
+		width: 120px;
+		height: 120px;
 	}
 }
 
@@ -246,11 +261,13 @@
 
 /* landscape */
 @media (orientation: landscape) {
-	.presentation__img {
-		margin-top: 15px;
+
+	.presentation {
+		height: 160vh;
 	}
 
 	.form-area {
+		margin-top: 40px;
 		margin-bottom: 15px;
 	}
 }
