--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -14,7 +14,8 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	height: 90vh;
+	min-height: 90vh;
+	gap: 20px;
 }
 
 .presentation__img-section {
@@ -262,9 +263,9 @@
 /* landscape */
 @media (orientation: landscape) {
 
-	.presentation {
+	/* .presentation {
 		height: 160vh;
-	}
+	} */
 
 	.form-area {
 		margin-top: 40px;
