--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -14,8 +14,9 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	min-height: 90vh;
-	gap: 20px;
+	/* min-height: 90vh;
+	max-height: 160vh; */
+	min-height: 700px;
 }
 
 .presentation__img-section {
@@ -43,7 +44,7 @@
 	}
 }
 
-@media (max-width: 580px) {
+/* @media (max-width: 580px) {
 	.presentation__img-section {
 		height: 120px;
 		width: 120px;
@@ -53,7 +54,7 @@
 		width: 120px;
 		height: 120px;
 	}
-}
+} */
 
 .presentation__text-section {
 	min-width: 550px;
